== History

jeckyl-0.1.8 2-June-2012

Made sure Jeckyl::Service inherits from Jeckyl::Options!

jeckyl-0.1.7 1-June-2012

Added Jeckyl::Service as a class which already defines all of the config options needed
for a Jerbil::Service

jeckyl-0.1.6 19-Dec-2011

Correct silly typo in config_file change

jeckyl-0.1.5 19-Dec-2011

Add :config_file to self to remember where the config file is

jeckyl-0.1.4 25-July-2011

changed ignore_errors_on_default to true as the default

jeckyl-0.1.3 23-June-2011

Minor tweak to get string handling working properly for generating configs

jeckyl-0.1.2 23-June-2011

Update to check that defaults meet specified rules properly, and handle strings and symbols when generating files

jeckyl-0.1.1 26-Apr-2011

Added ConfigRoot as the default root for config files

jeckyl-0.1.0 18-Apr-2011

Changed structure to module-based due to superclass mismatch errors. This version of
Jeckyl is not backward compatible.

jeckyl-0.0.4 14-Apr-2011

Minor Update to fix a superclass error caused by requiring version before the first
declaration of the Jeckyl class.

jeckyl-0.0.3a 11-Apr-2011

Another slight change