@@ -1,13 +1,13 @@
 # Created by Jevoom
 #
-# 02-Jun-2012
-#   Made sure Jeckyl::Service inherits from Jeckyl::Options!
+# 06-Jun-2012
+#   Included require 'jeckyl' in service.rb
 
 module Jeckyl
-  # version set to 0.1.8
-  Version = '0.1.8'
-  # date set to 02-Jun-2012
-  Version_Date = '02-Jun-2012'
-  #ident string set to: jeckyl-0.1.8 02-Jun-2012
-  Ident = 'jeckyl-0.1.8 02-Jun-2012'
+  # version set to 0.1.9
+  Version = '0.1.9'
+  # date set to 06-Jun-2012
+  Version_Date = '06-Jun-2012'
+  #ident string set to: jeckyl-0.1.9 06-Jun-2012
+  Ident = 'jeckyl-0.1.9 06-Jun-2012'
 end
